--- a/src/StreamDeckvJoyControl/vJoyControl.csproj
+++ b/src/StreamDeckvJoyControl/vJoyControl.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.1.74">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="StreamDeck-Tools" Version="2.8.0" />
     <PackageReference Include="vJoyInterface" Version="0.2.1.6" />
   </ItemGroup>
